--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 <div id="home" class="top-header" style="width:100%; position:fixed; z-index:999; background:rgba(255, 255, 255, 0.88);margin:0px; padding:15px;">
-	 <div class="container">
-		 <!-- <div class="logo">
+	 <div class="container">		 <!-- <div class="logo">
 				<h1><a href="index.html">Emplox</a></h1>
 				<img src='images/pic2.jpg'>
 		 </div> -->
@@ -153,7 +152,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container" >
 			 <div class="banner-info" style="padding-top:50px;padding-bottom:10px">
 				 <h2>PREETHI G</h2>
-				<h3 style="color:rgba(255, 255, 255, 0.59);">INTERN(CONTRACTIR)</h3>
+				<h3 style="color:rgba(255, 255, 255, 0.59);">INTERN(CONTRACTOR)</h3>
 				 <p>I would like to develope my skills and abilities in an environment, thereby providing meaningful 
 				contribution to the organization development and simultaneously self development
 </p>
